k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: githubactions-task
  name: githubactions-task
spec:
  replicas: 5
  selector:
    matchLabels:
      app: githubactions-task
      version: "latest"
  template:
    metadata:
      labels:
        app: githubactions-task
        version: "latest"
    spec:
      containers:
        - image: githubactions-task:4f19a1e7bb0713bbe41ee4881d30965400aa0cfc
          name: githubactions-task
          ports:
            - name: http
              containerPort: 8050
