k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: githubactions-task
  name: githubactions-task
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: githubactions-task
  type: ClusterIP
